--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
         "grunt-contrib-less": "*",
         "grunt-contrib-uglify": "*",
         "grunt-contrib-watch": "*",
-        "grunt-contrib-jshint": "*"
+        "grunt-contrib-jshint": "*",
+        "grunt-contrib-connect": "*"
     }
 }
