--- a/client/bower.json
+++ b/client/bower.json
@@ -15,8 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "*",
-    "angular-datastore": "*",
-    "semantic": "*"
+    "angular": "1.2.*",
+    "angular-route": "1.2.*",
+    "lodash": "1.2.*",
+    "angular-datastore": "*"
   }
 }
